<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android_custom="http://schemas.android.com/apk/res/com.bob.massabot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gray"
    tools:context="com.bob.massabot.MainActivity" >
    
    

     <com.bob.massabot.widget.RoundProgressBar
        android:id="@+id/roundProgressBar"
        android:layout_width="160dip"
        android:layout_height="160dip"
        android_custom:roundColor="#C9C9C9"
        android_custom:roundProgressColor="#3B3B3B"
        android_custom:textColor="#698B22"
        android_custom:roundWidth="10dip"
        android_custom:textSize="18sp" 
        android:layout_centerInParent="true"/>
     
     <TextView 
       android:id="@+id/demo_to_index"
       android:layout_marginTop="20dp"
       android:layout_marginStart="5dp"
       android:layout_width="wrap_content"
       android:layout_height="30dp"
       android:textSize="15sp"
       android:textColor="#FEFEFE"
       android:padding="3dp"
       android:text="@string/back_text"
       />
     
     <TextView 
       android:id="@+id/main_to_demo"
       android:layout_alignBottom="@id/demo_to_index"
       android:layout_width="wrap_content"
       android:layout_height="30dp"
       android:textSize="15sp"
       android:textColor="#FEFEFE"
       android:padding="3dp"
       android:text="@string/demo_text"
       android:layout_toEndOf="@id/roundProgressBar"
       android:layout_marginStart="150dp"
       />
     
     <TextView 
       android:id="@+id/finger_temp"
       android:layout_alignBottom="@id/demo_to_index"
       android:layout_marginStart="225dp"
       android:layout_width="wrap_content"
       android:layout_height="30dp"
       android:textSize="15sp"
       android:textColor="#FEFEFE"
       android:padding="3dp"
       android:text="@string/finger_tem_text"
       />
     
     <TextView 
       android:id="@+id/finger_temp_reduce"
       android:layout_toEndOf="@id/finger_temp"
       android:layout_marginStart="15dp"
       android:layout_alignBaseline="@id/finger_temp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="20sp"
       android:text="－"
	   android:textColor="#FFFFFF"
       />
     
      <TextView 
       android:id="@+id/finger_temp_num"
       android:layout_toEndOf="@id/finger_temp_reduce"
       android:layout_marginStart="15dp"
       android:layout_alignBaseline="@id/finger_temp_reduce"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="15sp"
       android:textColor="#FEFEFE"
       android:text="38℃"
       />
     
     <TextView 
       android:id="@+id/finger_temp_add"
       android:layout_toEndOf="@id/finger_temp_num"
       android:layout_marginStart="15dp"
       android:layout_alignBaseline="@id/finger_temp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="20sp"
       android:textColor="#FFFFFF"
       android:text="+"
       />
     
     <Button
        android:id="@+id/start"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:text="@string/start_text"
        android:layout_alignTop="@id/roundProgressBar"
        android:textSize="15sp"
        android:background="@drawable/normal_button"
        android:layout_marginStart="30dp"
        />
     
     
     <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/pause_text"
        android:layout_below="@id/start"
        android:clickable="false"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:layout_alignStart="@id/start"
        android:layout_alignEnd="@id/start"
        android:background="@drawable/normal_button"
         />
     
     <Button
        android:id="@+id/voice_adjust"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/voice_adjustment_text"
        android:layout_below="@id/pause"
        android:clickable="false"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:layout_alignStart="@id/start"
        android:layout_alignEnd="@id/start"
        android:background="@drawable/normal_button"
         />
     
     <Button
        android:id="@+id/shoulder"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:layout_alignBottom="@id/start"
        android:background="@drawable/massage_button"
        android:layout_toEndOf="@id/roundProgressBar"
        android:layout_marginStart="80dp"
        />
     
     <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_below="@id/shoulder"
        android:layout_marginTop="30dp"
        android:layout_alignStart="@id/shoulder"
        android:layout_alignEnd="@id/shoulder"
        android:layout_alignBottom="@id/pause"
        android:background="@drawable/massage_button"
        android:textSize="15sp"
        android:layout_toEndOf="@id/roundProgressBar"
        />
     
     
     <Button
        android:id="@+id/waist"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_below="@id/back"
        android:layout_marginTop="30dp"
        android:layout_alignStart="@id/shoulder"
        android:layout_alignEnd="@id/shoulder"
        android:layout_alignBottom="@id/voice_adjust"
        android:textSize="15sp"
        android:background="@drawable/massage_button"
         />
     
 </RelativeLayout>
