<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android_custom="http://schemas.android.com/apk/res/com.bob.massabot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gray"
    tools:context="com.bob.massabot.DemoActivity" >
    
   <TextView 
       android:id="@+id/demo_back_to_main"
       android:layout_marginTop="20dp"
       android:layout_marginStart="5dp"
       android:layout_width="wrap_content"
       android:layout_height="30dp"
       android:textSize="15sp"
       android:textColor="#FEFEFE"
       android:padding="3dp"
       android:text="@string/back_text"
       />
   
   <TextView 
       android:id="@+id/finger_temp"
       android:layout_alignBottom="@id/demo_back_to_main"
       android:layout_marginStart="200dp"
       android:layout_width="wrap_content"
       android:layout_height="30dp"
       android:textSize="15sp"
       android:textColor="#FEFEFE"
       android:padding="3dp"
       android:text="@string/finger_tem_text"
       />
     
     <TextView 
       android:id="@+id/finger_temp_reduce"
       android:layout_toEndOf="@id/finger_temp"
       android:layout_marginStart="15dp"
       android:layout_alignBaseline="@id/finger_temp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="20sp"
       android:text="－"
	   android:textColor="#FFFFFF"
       />
     
      <TextView 
       android:id="@+id/finger_temp_num"
       android:layout_toEndOf="@id/finger_temp_reduce"
       android:layout_marginStart="15dp"
       android:layout_alignBaseline="@id/finger_temp_reduce"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="15sp"
       android:textColor="#FEFEFE"
       />
     
     <TextView 
       android:id="@+id/finger_temp_add"
       android:layout_toEndOf="@id/finger_temp_num"
       android:layout_marginStart="15dp"
       android:layout_alignBaseline="@id/finger_temp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="20sp"
       android:textColor="#FFFFFF"
       android:text="+"
       />
     
     <Button
         android:id="@+id/com5"
         android:layout_width="80dp"
         android:layout_height="30dp"
         android:layout_alignBottom="@id/demo_back_to_main"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="50dp"
         android:background="@drawable/massage_button"
         android:text="com5"
         />
     
     <Button
         android:id="@+id/com9"
         android:layout_width="80dp"
         android:layout_height="30dp"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="50dp"
         android:layout_marginTop="60dp"
         android:background="@drawable/massage_button"
         android:text="com9"
         />
     

    <Button
        android:id="@+id/demo_start"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:text="@string/start_text"
        android:layout_alignParentStart="true"
        android:clickable="false"
        android:layout_marginTop="100dp"
        android:textSize="15sp"
        android:background="@drawable/normal_button"
        android:layout_marginStart="60dp"
        />
    
    <Button
        android:id="@+id/demo_pause"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:text="@string/pause_text"
        android:layout_below="@id/demo_start"
        android:clickable="false"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:background="@drawable/normal_button"
        android:layout_alignEnd="@id/demo_start"
         />
    
     <com.bob.massabot.widget.DropDownListView
         android:id="@+id/demo_dropdown"
         android:layout_width="120dp"
         android:layout_height="30dp"
         android:layout_marginTop="70dp"
         android:layout_centerHorizontal="true"
         android:gravity="center" >
     </com.bob.massabot.widget.DropDownListView>
     
      <com.bob.massabot.widget.RoundProgressBar
        android:id="@+id/demoRoundProgressBar"
        android:layout_width="160dip"
        android:layout_height="160dip"
        android_custom:roundColor="#C9C9C9"
        android_custom:roundProgressColor="#3B3B3B"
        android_custom:textColor="#698B22"
        android_custom:roundWidth="10dip"
        android_custom:textSize="18sp" 
        android:layout_centerInParent="true"
        android:visibility="invisible"/>
      
      <Chronometer
		android:id ="@+id/chronometer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:format="%m%s"
		android:textSize="20sp"
		android:textColor="#00FF00"
		android:layout_centerInParent="true"
		android:layout_below="@id/demo_dropdown"
		android:layout_marginTop="40dp"
		android:visibility="invisible" />
     
     <Button
        android:id="@+id/demo_mode"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:text="@string/demo_mode_text"
        android:layout_toEndOf="@id/demo_dropdown"
        android:layout_marginStart="60dp"
        android:clickable="false"
        android:layout_marginTop="100dp"
        android:textSize="15sp"
        android:background="@drawable/massage_button"
        />
    
    <Button
        android:id="@+id/reappear_mode"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:text="@string/reappear_mode_text"
        android:layout_below="@id/demo_mode"
        android:clickable="false"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:background="@drawable/massage_button"
        android:layout_alignEnd="@id/demo_mode"
         />

</RelativeLayout>
